# dio-nttdata-Desafios

./: README.md
pacotes/: pyproject.toml
powerbi/: DIO_RelatorioFinanceiro_Desafio2.pbix
powerbi/Desafio Analitico/: DIO_RelatorioFinanceiro_Desafio_analitico.pbix
powerbi/Desafio Limpeza de Dados/: Transformação_de_Dados.md
powerbi/Desafio Professor/: README.md
powerbi/Desafio Star Schema - Financials/: DESAFIO - USANDO A SAMPLE FAINANCIA.md  DESAFIO - USANDO A SAMPLE FINANCIALS.md
python/: desafio_bancario.py
