[tool.poetry]
name = "01 - teste de geraçao de pacote"
version = "0.1.0"
description = ""
authors = ["Debora <debora.inouye@gmail.com>"]
readme = "README.md"
packages = [{include = "01 _ gerando pacote"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
